# HWorker

./: .flake8  .gitignore  HWorker.xcf  Pipfile  README.md  default_hworker.toml  example.toml  legacy.toml  pyproject.toml
.github/workflows/: create_release.yaml  pr.yaml  pull_requests&push.yaml  pulls_tests.yaml  tests.yaml
depot/: __init__.py
example/studentka/first/: prog.py
example/teacher/first/check/: attendance.py  deadline.py  no_import.py  solution_size.py
example_scores/: user_qualifier.py
hworker/: __main__.py
hworker/check/: __init__.py  _tools.py  runtime.py  validate.py
hworker/config/: __init__.py  default_config.py  default_hworker.toml
hworker/control/: __init__.py  cli.py
hworker/deliver/: __init__.py  git.py
hworker/deliver/file/: __init__.py
hworker/deliver/git/: __init__.py  git.py
hworker/deliver/git/config/: __init__.py
hworker/deliver/imap/: __init__.py  mailer_utilities.py
hworker/depot/: __init__.py  objects.py
hworker/depot/database/: __init__.py  common.py  functions.py  models.py
hworker/example/: example.toml
hworker/example/repo/teacher/first/check/: deadline.py  no_import.py  solution_size.py
hworker/example/scores/: formula.py  task_qualifier.py  user_qualifier.py
hworker/log/: __init__.py
hworker/log/config/: __init__.py
hworker/make/: __init__.py  screenplay.py
hworker/multiback/: __init__.py
hworker/publish/: __init__.py  app.py  lib.py
hworker/publish/static/: base.css  datatables.js  night_mode.js
hworker/publish/templates/: base.html  index.html  info.html  status.html  student.html
hworker/score/: __init__.py
proposals/depot/: __init__.py
proposals/multiback/: __init__.py  __main__.py  complex.py  multi.py  simple.py
proposals/multiback/back/: A.py  B.py
proposals/multiback_client/: A.py  __init__.py
proposals/multiback_client/back/: B.py
tests/: B.txt  Besc.txt  T.txt  Tesc.txt  conftest.py  test_check.py  test_check_runtime.py  test_config.py  test_control.py  test_deliver.py  test_deliver_git.py  test_deliver_git_config.py  test_depot.py  test_make.py  test_multiback.py  test_screenplay.py  user_config.py
