[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hworker"
authors = [
    { name = "George V. Kouryachy", email = "george@altlinux.org" },
    { name = "Veniamin Arefev", email = "veniamin.arefev@mail.ru" },
    { name = "Nikita Barabanov", email = "barabanov.ns@gmail.com" },
]
description = "My package description"
readme = "README.rst"
requires-python = ">=3.11"
license = { text = "GPL-3.0 license" }
dynamic = ["version", "dependencies"]

[tool.setuptools_scm]
write_to = "hworker/_version.py"

#[tool.setuptools.dynamic]
#dependencies = {file = ["README.rst", "USAGE.rst"]}

[tool.setuptools]
packages = ["hworker"]

[project.scripts]
test_control = "hworker.control:test"

[tool.pytest.ini_options]
tmp_path_retention_policy = "failed"

