[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "setuptools-pipfile"]
build-backend = "setuptools.build_meta"

[project]
name = "hworker"
authors = [
    { name = "George V. Kouryachy", email = "george@altlinux.org"     },
    { name = "Veniamin Arefev",     email = "veniamin.arefev@mail.ru" },
    { name = "Nikita Barabanov",    email = "barabanov.ns@gmail.com"  },
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0 license" }
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools-pipfile]
path = "Pipfile"

[tool.setuptools_scm]
write_to = "hworker/_version.py"

[project.scripts]
hworker = "hworker.control.cli:shell"

[tool.pytest.ini_options]
tmp_path_retention_policy = "failed"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'


